--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Pages</title>
 </head>
 <body>
+    <a href="https://www.freepnglogos.com/uploads/logo-website-png/logo-website-website-
+    logo-png-transparent-background-background-15.png"></a>
     <h1>Hello World!</h1>
-    <h2>Hello World!</h2>
 </body>
 </html>
