Added "Logo" (Revision)

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Home Pages</title>
 </head>
 <body>
-    <a href="https://www.freepnglogos.com/uploads/logo-website-png/logo-website-website-
-    logo-png-transparent-background-background-15.png"></a>
+    <img src="/logo.png" width="160px" height="160px">
     <h1>Hello World!</h1>
 </body>
 </html>
