--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Pages</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="header">Header</div>
     <img src="/logo.png" width="160px" height="160px">
     <h1>Hello World!</h1>
 </body>
