--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <img src="/logo.png" width="160px" height="160px">
     <h1>Hello World!</h1>
+    <div id="footer">Footer</div>
 </body>
 </html>
