changed style for selector #profile-container, to make it centered horizontally

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div id="header">Header</div>
-    <img src="/logo.png" width="160px" height="160px">
-    <h1>Hello World!</h1>
+    <div id="profile-container">
+        <img id="profile-image" src="/logo.png" alt="profile image">
+        <h2 id="profile-name">Trans Studio Cibubur</h2>
+     </div>
     <div id="footer">Footer</div>
 </body>
 </html>
